# binary-bomb

./: .gitignore  CMakeLists.txt  README  TODO  build  configure  run
br2-external/: Config.in  external.desc  external.mk  local.mk
br2-external/board/bomb-board/: busybox.config  kernel.config  post_build.sh  post_image.sh  run_script.sh
br2-external/board/bomb-board/rootfs_overlay/etc/: inittab  motd  sysctl.conf
br2-external/configs/: bomb-board_defconfig
br2-external/package/bomb/: Config.in  Makefile  bomb.mk
br2-external/package/bomb/guides/: answers.txt  armv7-abi-notes.txt  phase-1.adoc  phase-1.txt  phase-2.adoc  phase-2.txt  phase-3.adoc  phase-3.txt  phase-4.adoc  phase-4.txt  phase-5.adoc  phase-5.txt  readme.adoc  readme.txt  secret-phase.adoc  secret-phase.txt  tutorial.txt
br2-external/package/bomb/src/: bomb.c  secret.c  support.c  support.h
br2-external/package/tutorial/: Config.in  Makefile  tutorial.mk
br2-external/package/tutorial/guides/: tutorial.adoc  tutorial.txt
br2-external/package/tutorial/src/: secret.c  tutorial.c
configs/: buildroot.config  linux.config
src/: bomb.c  support.h
